Fixed login card alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,20 +10,14 @@ $error: #dc2626;
 
 @import "bootstrap";
 
-body {
+html, body {
   font-family: "Poppins", sans-serif;
   background: $background;
   color: $text-dark;
   justify-content: center;
   align-items: center;
-}
-
-footer {
-  font-size: 0.875rem;
-  color: #6c757d;
-  padding: 20px;
-  text-align: center;
-  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 /* Navbar Styles */
